--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.2",
     "recoil": "^0.1.2",
-    "styled-components": "^5.2.1"
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
+    "styled-components": "^5.2.1",
+    "typesafe-actions": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
@@ -25,6 +30,8 @@
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
+    "@types/react-redux": "^7.1.16",
+    "@types/redux-saga": "^0.10.5",
     "@types/styled-components-react-native": "^5.1.1",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
